# stratkit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: index.html
skills/: README.md
skills/dcf-valuation/: SKILL.md
skills/issue-tree/: SKILL.md
skills/market-sizing/: SKILL.md
stratkit/: __init__.py  llm.py  prompts.py  workflows.py
